# integration-test-bazel-java

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  WORKSPACE
src/main/java/com/example/myproject/: App.java  ClassWithTransitiveImports.java  TcTransitiveImports.java
