"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "rules_jvm_external", version = "5.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:31.1-jre",
    ],
    fetch_sources = True,
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
)
use_repo(maven, "maven")
